fix tooltip text color
Former-commit-id: 7006102961b02a39d6206a9bd6e12bc995189561

--- a/share/styles/appstyle-dark.css
+++ b/share/styles/appstyle-dark.css
@@ -8,7 +8,7 @@ QPushButton {
       color: white
       }
 QToolTip {
-      color: black;
+      color: white;
       opacity: 200;
       }
 PlayPanel QLabel#posLabel       {
