--- a/mscore/inspector_jump.ui
+++ b/mscore/inspector_jump.ui
@@ -38,6 +38,9 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout_2">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item row="1" column="2">
       <widget class="QToolButton" name="resetVisible">
        <property name="text">
