--- a/mscore/inspector_note.ui
+++ b/mscore/inspector_note.ui
@@ -14,8 +14,17 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <layout class="QGridLayout" name="gridLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item row="0" column="0" colspan="2">
       <widget class="QCheckBox" name="small">
        <property name="text">
