--- a/mscore/inspector_hairpin.ui
+++ b/mscore/inspector_hairpin.ui
@@ -14,6 +14,12 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QLabel" name="elementName">
      <property name="font">
@@ -45,6 +51,9 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item row="0" column="1" colspan="2">
       <widget class="QComboBox" name="subtype">
        <item>
