--- a/mscore/inspector_hbox.ui
+++ b/mscore/inspector_hbox.ui
@@ -14,6 +14,12 @@
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>0</number>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QLabel" name="elementName">
      <property name="font">
@@ -45,6 +51,12 @@
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout">
+     <property name="horizontalSpacing">
+      <number>0</number>
+     </property>
+     <property name="verticalSpacing">
+      <number>-1</number>
+     </property>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="rightGap">
        <property name="sizePolicy">
