--- a/mscore/inspector_ottava.ui
+++ b/mscore/inspector_ottava.ui
@@ -54,15 +54,8 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Subtype:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1" colspan="2">
-      <widget class="QComboBox" name="subtype">
+      <widget class="QComboBox" name="ottavaType">
        <item>
         <property name="text">
          <string>8va</string>
@@ -83,6 +76,27 @@
          <string>15mb</string>
         </property>
        </item>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Subtype:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QToolButton" name="resetOttavaType">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="musescore.qrc">
+         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
+       </property>
       </widget>
      </item>
     </layout>
