--- a/mscore/inspector_barline.ui
+++ b/mscore/inspector_barline.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>274</width>
-    <height>97</height>
+    <height>120</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,55 +54,11 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="1" column="1">
-      <widget class="QComboBox" name="span">
-       <item>
-        <property name="text">
-         <string>Staff default</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Tick</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Tick alt.</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Short</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Short alt.</string>
-        </property>
-       </item>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="type">
        <item>
         <property name="text">
-         <string>Measure default</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
          <string>Normal</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Dashed</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Dotted</string>
         </property>
        </item>
        <item>
@@ -112,34 +68,44 @@
        </item>
        <item>
         <property name="text">
+         <string>Start Repeat</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>End Repeat</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dashed</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
          <string>End</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>End-Start Repeat</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Dotted</string>
         </property>
        </item>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="label_2">
-       <property name="text">
-        <string>Span:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QToolButton" name="resetSpan">
-       <property name="toolTip">
-        <string>reset value</string>
-       </property>
-       <property name="text">
-        <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="musescore.qrc">
-         <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="text">
         <string>Type:</string>
        </property>
@@ -156,6 +122,12 @@
        <property name="icon">
         <iconset resource="musescore.qrc">
          <normaloff>:/data/icons-dark/resetproperty.png</normaloff>:/data/icons-dark/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
        </property>
       </widget>
      </item>
