enable initialization of concert & transposing clef from instruments.xml
Former-commit-id: 9b1656966f110f9eccb8cb3e663727eda3411dc3

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -1819,6 +1819,7 @@
       <description>Bass Saxophone</description>
       <extended>1</extended>
       <clef>G</clef>
+      <concertClef>G8vb</concertClef>
       <barlineSpan>1</barlineSpan>
       <aPitchRange>32-65</aPitchRange>
       <pPitchRange>32-70</pPitchRange>
